--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,9 @@
     <link rel="icon" href="./images/image.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 
+    <!-- Custom CSS for Team and Contact Sections -->
     <style>
+        /* CONTACT SECTION */
         .contact-section {
             background: #f8f9fa;
             padding-top: 60px;
@@ -42,6 +44,7 @@
             border-radius: 6px;
         }
 
+        /* TEAM SECTION */
         .team-section {
             background: #fafafa;
             padding-top: 60px;
@@ -88,139 +91,81 @@
         .team-social a:hover {
             color: #0056b3;
         }
-        .team-social a.fa-whatsapp {
-            color: #25D366;
-        }
     </style>
 </head>
 
 <body>
 
-<!-- HEADER -->
-<header class="header">
-    <a href="#" class="logo"><img src="./images/image.png" alt="logo"></a>
-    <div class="fas fa-bars"></div>
-    <nav class="navbar">
-        <ul>
-            <li><a href="#home">home</a></li>
-            <li><a href="#about">about</a></li>
-            <li><a href="#service">services</a></li>
-            <li><a href="#portfolio">portfolio</a></li>
-            <li><a href="#team">team</a></li>
-            <li><a href="careers.html">career</a></li>
-            <li><a href="#contact">contact</a></li>
-            <li><a href="#faq">FAQ</a></li>
-        </ul>
-    </nav>
-</header>
+    <!-- HEADER -->
+    <header class="header">
+        <a href="#" class="logo"><img src="./images/image.png" alt="logo"></a>
+        <div class="fas fa-bars"></div>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#home">home</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#service">services</a></li>
+                <li><a href="#portfolio">portfolio</a></li>
+                <li><a href="#team">team</a></li>
+                <li><a href="careers.html">career</a></li>
+                <li><a href="#contact">contact</a></li>
+                <li><a href="#faq">FAQ</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<!-- HOME -->
-<section id="home" class="home">
-    <h1>Nordic Tech & Cloud Solution</h1>
-    <h2>Your Trusted Partner for IT, Cloud & Digital Transformation</h2>
-    <div class="wave wave1"></div>
-    <div class="wave wave2"></div>
-    <div class="wave wave3"></div>
-</section>
+    <!-- HOME -->
+    <section id="home" class="home">
+        <h1>Nordic Tech & Cloud Solution</h1>
+        <h2>Your Trusted Partner for IT, Cloud & Digital Transformation</h2>
+        <div class="wave wave1"></div>
+        <div class="wave wave2"></div>
+        <div class="wave wave3"></div>
+    </section>
 
-<!-- ABOUT -->
-<section id="about" class="about">
-    <h1 class="heading">About Us</h1>
-    <div class="row">
-        <div class="content">
-            <h3>Empowering Businesses with Nordic Innovation</h3>
-            <p>
-                Nordic Tech & Cloud Solution is a Sweden-based IT company founded and operated by 
-                <b>Shoaib Amanat</b>. We deliver high-quality digital solutions including website 
-                development, mobile apps, IT consultancy, cloud server setup, computer networking, 
-                and digital marketing.
-            </p>
-        </div>
-    </div>
-</section>
-
-<!-- TEAM -->
-<section class="team-section py-5" id="team">
-    <div class="container">
-        <h1 class="heading text-center mb-4">Our Team</h1>
-
-        <div class="row justify-content-center">
-            <div class="col-lg-4 col-md-6 col-sm-12">
-                <div class="team-card shadow-sm p-4 text-center">
-                    <div class="team-img-wrapper mb-3">
-                        <img src="./images/team-shoaib.png" class="team-img" alt="Shoaib Amanat">
-                    </div>
-                    <h3 class="team-name mb-1">Shoaib Amanat</h3>
-                    <p class="team-role mb-3">Founder & Full Stack Developer</p>
-                    <div class="team-social">
-                        <!-- WhatsApp added -->
-                        <a href="https://wa.me/46700307289" target="_blank" class="fab fa-whatsapp" title="Chat on WhatsApp"></a>
-                        <a href="#" class="fab fa-facebook-f"></a>
-                        <a href="#" class="fab fa-twitter"></a>
-                        <a href="#" class="fab fa-instagram"></a>
-                        <a href="#" class="fab fa-linkedin"></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- CONTACT -->
-<section id="contact" class="contact-section">
-    <div class="container">
-        <h1 class="heading text-center mb-4">Get in Touch</h1>
-
+    <!-- ABOUT -->
+    <section id="about" class="about">
+        <h1 class="heading">About Us</h1>
         <div class="row">
-            <div class="col-lg-6 col-md-12 mb-4">
-                <div class="contact-map shadow-sm rounded overflow-hidden">
-                    <iframe 
-                        src="https://www.google.com/maps?q=13666+Vendelsö,+Stockholm,+Sweden&output=embed"
-                        style="border:0;" allowfullscreen loading="lazy">
-                    </iframe>
-                </div>
-            </div>
-
-            <div class="col-lg-6 col-md-12">
-                <div class="contact-form shadow-sm p-4 rounded bg-white">
-                    <form action="./contactme.php" method="POST">
-                        <input type="text" class="form-control mb-3" placeholder="Full Name" required>
-                        <input type="email" class="form-control mb-3" placeholder="Email" required>
-                        <textarea class="form-control mb-3" rows="5" placeholder="Message" required></textarea>
-                        <button class="btn btn-primary btn-block">Send Message</button>
-                    </form>
-                </div>
+            <div class="content">
+                <h3>Empowering Businesses with Nordic Innovation</h3>
+                <p>
+                    Nordic Tech & Cloud Solution is a Sweden-based IT company founded and operated by 
+                    <b>Shoaib Amanat</b>. We deliver high-quality digital solutions including website 
+                    development, mobile apps, IT consultancy, cloud server setup, computer networking, 
+                    and digital marketing.
+                </p>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- FOOTER -->
-<div class="footer">
-    <div class="footer-top">
+    <!-- TEAM -->
+    <section class="team-section py-5" id="team">
         <div class="container">
-            <div class="row">
+            <h1 class="heading text-center mb-4">Our Team</h1>
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="team-card shadow-sm p-4 text-center">
+                        <div class="team-img-wrapper mb-3">
+                            <img src="./images/team-shoaib.png" class="team-img" alt="Shoaib Amanat">
+                        </div>
+                        <h3 class="team-name mb-1">Shoaib Amanat</h3>
+                        <p class="team-role mb-3">Founder & Full Stack Developer</p>
 
-                <div class="col-lg-3 footer-contact">
-                    <h4>Contact Us</h4>
-                    <p>
-                        Sweden<br><br>
-                        <strong>WhatsApp:</strong>
-                        <a href="https://wa.me/46700307289" target="_blank">
-                            +46 700 307 289
-                        </a><br>
-                        <strong>Email:</strong> info@nordictechcloud.se
-                    </p>
+                        <!-- WhatsApp icon added (ONLY CHANGE) -->
+                        <div class="team-social">
+                            <a href="https://wa.me/4670030728" target="_blank" class="fab fa-whatsapp"></a>
+                            <a href="#" class="fab fa-facebook-f"></a>
+                            <a href="#" class="fab fa-twitter"></a>
+                            <a href="#" class="fab fa-instagram"></a>
+                            <a href="#" class="fab fa-linkedin"></a>
+                        </div>
+
+                    </div>
                 </div>
-
             </div>
         </div>
-    </div>
-
-    <div class="container text-center mt-3">
-        <p style="color:#fff;">© 2025 Nordic Tech & Cloud Solution. All Rights Reserved.</p>
-    </div>
-</div>
+    </section>
 
 </body>
 </html>
